--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arturo Joseph Tijerina</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -15,8 +18,9 @@
     </main>
     <footer>
         <div class="footer-left">
-            <p>Desktop Support Technician</p>
+            <p><strong><em>Desktop Support Technician</em></strong></p>
             <p>based in San Antonio, Texas</p>
+            <img src="./images/san-antonio-skyline.png" alt="San Antonio Skyline" class="footer-image">
         </div>
     </footer>
 </body>
