--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="footer-left">
             <p><strong><em>Desktop Support Technician</em></strong></p>
             <p>based in San Antonio, Texas</p>
-            <img src="./images/san-antonio-skyline.png" alt="San Antonio Skyline" class="footer-image">
+            <img src="san-antonio-skyline.png" alt="San Antonio Skyline" class="footer-image">
         </div>
     </footer>
 </body>
